Sound manager and xaml binding

--- a/UWPSoundBoard/MainPage.xaml
+++ b/UWPSoundBoard/MainPage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:UWPSoundBoard"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:data="using:UWPSoundBoard.Model"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -33,7 +34,7 @@
                    OpenPaneLength="200">
             <SplitView.Pane>
                 <ListView Name="MenuItemsListView" IsItemClickEnabled="True"
-                          ItemClick="MenuItemsListView_Click" />
+                          ItemClick="MenuItemsListView_ItemClick" />
             </SplitView.Pane>
             <SplitView.Content>
                 <Grid Margin="20,20,0,0">
@@ -50,9 +51,15 @@
                               Name="SoundGridView"
                               SelectionMode="None"
                               IsItemClickEnabled="True"
+                              ItemsSource="{x:Bind sounds}"
                               ItemClick="SoundGridView_ItemClick">
+                        <GridView.ItemTemplate>
+                            <DataTemplate x:DataType="data:Sound">
+                                <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}" />
+                            </DataTemplate>
+                        </GridView.ItemTemplate>
                     </GridView>
-
+                    
 
 
                 </Grid>
