--- a/UWPSoundBoard/MainPage.xaml
+++ b/UWPSoundBoard/MainPage.xaml
@@ -28,13 +28,32 @@
                     RelativePanel.RightOf="HamburgerButton"
                     />
         </RelativePanel>
-        <SplitView Name="MySplitView"
+        <SplitView Grid.Row="1" Name="MySplitView"
                    DisplayMode="CompactOverlay"
                    CompactPaneLength="45"
                    OpenPaneLength="200">
             <SplitView.Pane>
                 <ListView Name="MenuItemsListView" IsItemClickEnabled="True"
-                          ItemClick="MenuItemsListView_ItemClick" />
+                          ItemsSource="{x:Bind menuItems}"
+                          ItemClick="MenuItemsListView_ItemClick" >
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="data:MenuItem" >
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="{x:Bind IconFile}" 
+                                       Height="35" 
+                                       Width="35"
+                                       Margin="-10,10,0,10"
+                                       />
+                                <TextBlock 
+                                    Text="{x:Bind Category}" 
+                                    FontSize="18" 
+                                    Margin="10,0,0,0" 
+                                    VerticalAlignment="Center" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+
+                </ListView>
             </SplitView.Pane>
             <SplitView.Content>
                 <Grid Margin="20,20,0,0">
